<resources>
    <string name="app_name">NatureTrustBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_recompensas">Recompensas</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_acercade">Acerca de</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="canjear_puntos">¡Canjear puntos!</string>
    <string name="compartir">¡Compartir!</string>
    <string name="puntos_recaudados">PUNTOS RECAUDADOS</string>
    <string name="puntos_numero">0000</string>
    <string name="reclamr_puntos">¡RECLAMAR PUNTOS!</string>
    <string name="obterner_recompensa">OBTEN RECOMPENSAS ¡YA!</string>
    <string name="historial_puntos">Historial de puntos recaudados"</string>
    <string name="descripción_reward">Acercate a los puntos de colección más cercano y acumula puntos NTB</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>