<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_recompensas"
            android:icon="@drawable/ic_trophy"
            android:title="@string/menu_recompensas" />
        <item
            android:id="@+id/nav_acercade"
            android:icon="@drawable/ic_contact_support"
            android:title="@string/menu_acercade" />

        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_ajustes" />
    </group>
</menu>